=tab title overflow problem, run button hide problem fixed, tabs have a x-scroll now

--- a/css/style.css
+++ b/css/style.css
@@ -24,16 +24,6 @@ body {
     border-color: #333;
 }
 
-#new-tab-button {
-    border: 1px solid transparent;
-    padding: 1px;
-    color:inherit;
-    border-radius:4px;
-    font-size:20px;
-    background-color: #232b2b;
-    margin:6px;
-}
-
 label i {
     position:absolute;
     right:12px;
@@ -56,33 +46,37 @@ label i:hover {
 }
 
 #runButton {
-    position: absolute;
-    right:5px;
+    position: fixed;
+    right:12px;
+    top: 45px;
     color: #FFF;
     background-color: #28a745;
     border-color: #28a745;
+    z-index:3;
     display:none;
 }
 
 /* for tab */
 #tabs {
   position: relative;   
-  height:100%;
   clear: both;
+  overflow-x:auto;
+  white-space: nowrap;
   margin: 0;
 }
 .tab {
   float: left;
+  display: inline-block;
 }
 .tab label {
   background: 	#232b2b;
-  padding: 10px; 
+  padding: 10px 30px;
   border: 1px solid 	#232b2b;;
   margin-left: -1px; 
   display:block;
   position: relative;
   left: 1px; 
-  width:140px;
+  min-width:140px;
   text-align:center;
   user-select:none;
 }
@@ -90,7 +84,7 @@ label i:hover {
   display: none;   
 }
 .content {
-  position: absolute;
+  position: fixed;
   top: 43px;
   left: 0;
   background: 	#232b2b;
@@ -109,3 +103,26 @@ label i:hover {
 
 /* ^ for tab */
 
+/* custom scroll */
+/* width */
+::-webkit-scrollbar {
+    height:4px;
+    width:6px;
+    position:absolute;
+    top: -10px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  background: #414a4c;
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #999;
+}
+/* ^ custom scroll */
